# omniscient

./: .gitignore  .impeccable.md  OMI-DESIGN.md  PINNED_POST_OPTIONS.md  README.draft.md  README.md  ROADMAP.md  SHOW_HN_PREP.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: exporter.rs  lib.rs
src-tauri/src/audio/: capture.rs  mod.rs  transcribe.rs  vad.rs
src-tauri/src/db/: schema.rs
src-tauri/src/llm/: client.rs  embed.rs  mod.rs  processor.rs  rag.rs  tools.rs
src/components/: Sidebar.tsx  VoiceMode.tsx
src/lib/: tauri.ts
src/pages/: ChatPage.tsx  ConversationDetailPage.tsx  ConversationsPage.tsx  FocusPage.tsx  MemoriesPage.tsx  RewindPage.tsx  SettingsPage.tsx  TasksPage.tsx
src/styles/: app.css  tokens.css
src/windows/: FloatingBar.tsx
