[package]
name = "omniscient"
version = "0.1.0"
description = "An always-on AI assistant for Linux"
authors = ["Salah Eddine Boussettah"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omniscient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
directories = "6"
cpal = "0.15"
rubato = "0.16"
ringbuf = "0.4"
voice_activity_detector = "0.2"
whisper-rs = "0.14"
reqwest = { version = "0.12", features = ["blocking"] }
